k8s/prod/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/v1/custer-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - kosamtech.com
        - www.kosamtech.com
      secretName: kosamtech-com
  rules:
    - hosts: kosamtech.com
      http:
        paths:
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /supersecret/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /redoc/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /static/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /media/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /flower/
            backend:
              serviceName: flower-cluster-ip-service
              servicePort: 5555
          - path: /mailhog/
            backend:
              serviceName: mailhog-cluster-ip-service
              servicePort: 8025
          - path: /es/
            backend:
              serviceName: mailhog-cluster-ip-service
              servicePort: 9200
  - hosts: www.kosamtech.com
    http:
      paths:
        - path: /api/
          backend:
            serviceName: server-cluster-ip-service
            servicePort: 8000
        - path: /supersecret/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /redoc/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /static/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /media/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 8000
          - path: /flower/
            backend:
              serviceName: flower-cluster-ip-service
              servicePort: 5555
          - path: /mailhog/
            backend:
              serviceName: mailhog-cluster-ip-service
              servicePort: 8025
          - path: /es/
            backend:
              serviceName: mailhog-cluster-ip-service
              servicePort: 9200
